syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

message APORMessage {
    string loanTerm = 1;
    repeated double values = 2;
}

enum RateTypeMessage {
    FIXED = 0;
    VARIABLE = 1;
}